Desacopla la logica en modulos

--- a/css/pastillas.css
+++ b/css/pastillas.css
@@ -554,6 +554,7 @@ tr th {
 tr th button{
   background-color:#00050e;
   border: none;
+  padding-left: 5px;
 }
 
 #resultados tr td {
@@ -580,6 +581,24 @@ td img {
 
 .titulo {
   width: 466px;
+  display: grid;
+  grid-template-columns: 60% 35%;
+  grid-template-rows: 100%;
+  border: none;
+}
+
+.titulo p {
+  font-family: 'lato';
+  font-size: 22px;
+  color: white;
+  display: flex;
+  justify-content: end;
+  margin: 0;
+}
+
+#orden-titulo-descendente, #orden-titulo-ascendente {
+  display: flex;
+  justify-content: start;
 }
 
 .lanzamiento {
